# cs354-assn2

./: CMakeLists.txt  Constants.h  GLLight.cpp  GLLight.h  OpenGLInterface.cpp  OpenGLInterface.h  Scene.cpp  Scene.h  Trimesh.cpp  Trimesh.h  TrimeshLoader.cpp  TrimeshLoader.h  main.cpp  tests.cpp
